--- a/src/config/quiz-config.json
+++ b/src/config/quiz-config.json
@@ -90,8 +90,8 @@
         {
           "id": "totalCholesterol",
           "type": "number",
-          "label": "Total Cholesterol (mg/dL)",
-          "description": "Normal range: <200 mg/dL",
+          "label": "Total Cholesterol (mg/dL) - Optional",
+          "description": "Normal range: <200 mg/dL. Skip if you don't know.",
           "placeholder": "e.g. 180",
           "required": false,
           "className": {
@@ -103,8 +103,8 @@
         {
           "id": "hdlCholesterol",
           "type": "number",
-          "label": "HDL Cholesterol (mg/dL)",
-          "description": "Higher is better: >40 (men), >50 (women)",
+          "label": "HDL Cholesterol (mg/dL) - Optional",
+          "description": "Higher is better: >40 (men), >50 (women). Skip if you don't know.",
           "placeholder": "e.g. 45",
           "required": false,
           "className": {
@@ -116,8 +116,8 @@
         {
           "id": "systolicBP",
           "type": "number",
-          "label": "Systolic Blood Pressure (mmHg)",
-          "description": "The top number in your blood pressure reading. Normal: <120 mmHg",
+          "label": "Systolic Blood Pressure (mmHg) - Optional",
+          "description": "The top number in your blood pressure reading. Normal: <120 mmHg. Skip if you don't know.",
           "placeholder": "e.g. 120",
           "required": false,
           "className": {
@@ -145,23 +145,27 @@
         {
           "id": "weight",
           "type": "number",
-          "label": "Weight (kg)",
+          "label": "Weight (kg) - Optional",
+          "description": "Skip if you don't know your exact weight.",
           "placeholder": "e.g. 70",
           "required": false,
           "className": {
             "container": "space-y-2",
-            "label": "text-sm font-medium"
+            "label": "text-sm font-medium",
+            "description": "text-xs text-muted-foreground mb-2"
           }
         },
         {
           "id": "height",
           "type": "number",
-          "label": "Height (cm)",
+          "label": "Height (cm) - Optional",
+          "description": "Skip if you don't know your exact height.",
           "placeholder": "e.g. 175",
           "required": false,
           "className": {
             "container": "space-y-2",
-            "label": "text-sm font-medium"
+            "label": "text-sm font-medium",
+            "description": "text-xs text-muted-foreground mb-2"
           }
         },
         {
@@ -325,7 +329,7 @@
           "id": "creatinine",
           "type": "number",
           "label": "Serum Creatinine (mg/dL) - Optional",
-          "description": "This blood test measures kidney function. Normal range: 0.7-1.3 mg/dL (men), 0.6-1.1 mg/dL (women)",
+          "description": "This blood test measures kidney function. Normal range: 0.7-1.3 mg/dL (men), 0.6-1.1 mg/dL (women). Skip if you don't have this test result.",
           "placeholder": "e.g. 1.0",
           "step": 0.1,
           "required": false,
@@ -364,11 +368,11 @@
   ],
   "validation": {
     "basic": ["age", "gender"],
-    "cardiovascular": [],
-    "diabetes": [],
+    "cardiovascular": ["smokingStatus"],
+    "diabetes": ["physicalActivity"],
     "depression": ["phq9Responses"],
     "anxiety": ["gad7Responses"],
-    "kidney": [],
+    "kidney": ["ethnicity"],
     "results": []
   }
 }
